Updated data processing and models

--- a/Machine Learning/data processing/CombineRawData.ipynb
+++ b/Machine Learning/data processing/CombineRawData.ipynb
@@ -1881,13 +1881,14 @@
     "turnclap_data = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\turnclap_dataset.csv')\n",
     "wiper_data = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\wiper_dataset.csv')\n",
     "\n",
+    "\n",
     "frames_result = [chicken_data, number7_data, sidestep_data, turnclap_data, wiper_data]\n",
     "result.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\dataset.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -1907,8 +1908,15 @@
     "sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\sidestep_extracted_dataset.csv')\n",
     "turnclap = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\turnclap_extracted_dataset.csv')\n",
     "wiper = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\wiper_extracted_dataset.csv')\n",
+    "number6 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\number6_extracted_dataset.csv')\n",
+    "salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\salute_extracted_dataset.csv')\n",
+    "mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\mermaid_extracted_dataset.csv')\n",
+    "swing = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\swing_extracted_dataset.csv')\n",
+    "cowboy = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\cowboy_extracted_dataset.csv')\n",
+    "finisher = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\finisher_extracted_dataset.csv')\n",
+    "rest = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\extracted data\\rest_extracted_dataset.csv')\n",
     "\n",
-    "frames_result = [chicken, number7, sidestep, turnclap, wiper]\n",
+    "frames_result = [chicken, number7, sidestep, turnclap, wiper, number6, salute, mermaid, swing, cowboy, finisher, rest]\n",
     "\n",
     "result = pd.concat(frames_result)\n",
     "# result = result.drop(['voltage', 'current', 'power', 'energy'], axis = 1).copy()\n",
