--- a/Machine Learning/data processing/DataProcessing.ipynb
+++ b/Machine Learning/data processing/DataProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,6 @@
     "                                                            'AcX 3', 'AcY 3', 'AcZ 3', 'GyX 3', 'GyY 3', 'GyZ 3'])\n",
     "    \n",
     "    mean_data = pd.DataFrame()\n",
-    "#     std_data = pd.DataFrame()\n",
     "    max_data = pd.DataFrame()\n",
     "    iqr_data = pd.DataFrame()\n",
     "    \n",
@@ -37,12 +36,10 @@
     "        a = cleaned_data[i:i+55:].copy()\n",
     "\n",
     "        a.loc['mean'] = a.mean()\n",
-    "#         a.loc['std'] = a.std()\n",
     "        a.loc['max'] = a.max()\n",
     "        a.loc['iqr'] = a.quantile(0.75) - a.quantile(0.25)\n",
     "        \n",
     "        mean_data = mean_data.append(a.loc['mean'], ignore_index=True)\n",
-    "#         std_data = std_data.append(a.loc['std'], ignore_index=True)\n",
     "        max_data = max_data.append(a.loc['max'], ignore_index=True)\n",
     "        iqr_data = iqr_data.append(a.loc['iqr'], ignore_index=True)\n",
     "        i += 11\n",
@@ -54,14 +51,7 @@
     "                                                      'GyX 2': 'mean_GyX 2', 'GyY 2': 'mean_GyY 2', 'GyZ 2': 'mean_GyZ 2',\n",
     "                                                      'AcX 3': 'mean_AcX 3', 'AcY 3': 'mean_AcY 3', 'AcZ 3': 'mean_AcZ 3', \n",
     "                                                      'GyX 3': 'mean_GyX 3', 'GyY 3': 'mean_GyY 3', 'GyZ 3': 'mean_GyZ 3',})\n",
-    "\n",
-    "#     std_data = std_data.rename(index=str, columns=  {'AcX 1': 'std_AcX 1', 'AcY 1': 'std_AcY 1', 'AcZ 1': 'std_AcZ 1', \n",
-    "#                                                      'GyX 1': 'std_GyX 1', 'GyY 1': 'std_GyY 1', 'GyZ 1': 'std_GyZ 1',\n",
-    "#                                                      'AcX 2': 'std_AcX 2', 'AcY 2': 'std_AcY 2', 'AcZ 2': 'std_AcZ 2', \n",
-    "#                                                      'GyX 2': 'std_GyX 2', 'GyY 2': 'std_GyY 2', 'GyZ 2': 'std_GyZ 2',\n",
-    "#                                                      'AcX 3': 'std_AcX 3', 'AcY 3': 'std_AcY 3', 'AcZ 3': 'std_AcZ 3', \n",
-    "#                                                      'GyX 3': 'std_GyX 3', 'GyY 3': 'std_GyY 3', 'GyZ 3': 'std_GyZ 3',})\n",
-    "    \n",
+    "  \n",
     "    max_data = max_data.rename(index=str, columns=  {'AcX 1': 'max_AcX 1', 'AcY 1': 'max_AcY 1', 'AcZ 1': 'max_AcZ 1', \n",
     "                                                     'GyX 1': 'max_GyX 1', 'GyY 1': 'max_GyY 1', 'GyZ 1': 'max_GyZ 1',\n",
     "                                                     'AcX 2': 'max_AcX 2', 'AcY 2': 'max_AcY 2', 'AcZ 2': 'max_AcZ 2', \n",
@@ -78,8 +68,8 @@
     "    \n",
     "    # combine features extracted into 1 \n",
     "    extracted_data = mean_data.join(max_data).join(iqr_data)\n",
-    "#     extracted_data = mean_data.join(std_data)\n",
-    "    mapping = {'chicken' : 1, 'number7' : 2, 'sidestep' : 3, 'turnclap' : 4, 'wiper' : 5}\n",
+    "    mapping = {'rest' : 0, 'chicken' : 1, 'number7' : 2, 'sidestep' : 3, 'turnclap' : 4, 'wiper' : 5,\n",
+    "               'number6' : 6, 'salute' : 7, 'mermaid' : 8, 'swing' : 9, 'cowboy' : 10, 'finisher' : 11}\n",
     "    extracted_data['activity'] = filename\n",
     "    extracted_data = extracted_data.replace({'activity': mapping})\n",
     "    \n",
@@ -89,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,11 +91,18 @@
     }
    ],
    "source": [
-    "# data_processing(\"chicken\")\n",
-    "# data_processing(\"number7\")\n",
+    "data_processing(\"chicken\")\n",
+    "data_processing(\"number7\")\n",
     "data_processing(\"sidestep\")\n",
-    "# data_processing(\"turnclap\")\n",
-    "# data_processing(\"wiper\")\n",
+    "data_processing(\"turnclap\")\n",
+    "data_processing(\"wiper\")\n",
+    "data_processing(\"number6\")\n",
+    "data_processing(\"salute\")\n",
+    "data_processing(\"mermaid\")\n",
+    "data_processing(\"swing\")\n",
+    "data_processing(\"cowboy\")\n",
+    "data_processing(\"finisher\")\n",
+    "data_processing(\"rest\")\n",
     "print('done')"
    ]
   },
