--- a/Machine Learning/model/MLP.ipynb
+++ b/Machine Learning/model/MLP.ipynb
@@ -2,50 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy for Neural Network is  1.0\n",
-      "The testing accuracy for Neural Network is  0.9962797619047619\n",
-      "time taken =  0:00:15.137502\n",
-      "The training accuracy for Support Vector Machines is  0.9987872105843439\n",
-      "The testing accuracy for Support Vector Machines is  0.9975198412698413\n",
+      "The training accuracy for Neural Network is  0.9990563026492916\n",
+      "The testing accuracy for Neural Network is  0.9952541526164606\n",
+      "time taken =  0:01:22.306680\n",
+      "The training accuracy for Support Vector Machines is  0.9984873086584232\n",
+      "The testing accuracy for Support Vector Machines is  0.9978768577494692\n",
       "The training accuracy for Random Forestry is  1.0\n",
-      "The testing accuracy for Random Forestry is  0.998015873015873\n",
-      "[[789   0   1   0   0]\n",
-      " [  0 779   0   2   0]\n",
-      " [  1   2 822   0   0]\n",
-      " [  1   7   0 795   0]\n",
-      " [  1   0   0   0 832]]\n",
-      "[[788   0   0   2   0]\n",
-      " [  0 777   0   4   0]\n",
-      " [  0   0 825   0   0]\n",
-      " [  0   2   1 800   0]\n",
-      " [  1   0   0   0 832]]\n",
-      "[[789   0   0   1   0]\n",
-      " [  0 781   0   0   0]\n",
-      " [  1   0 824   0   0]\n",
-      " [  1   1   1 800   0]\n",
-      " [  1   0   2   0 830]]\n",
+      "The testing accuracy for Random Forestry is  0.9988759835144249\n",
+      "[[145   0   0   2   0   0   0   0   0   0   0   0]\n",
+      " [  0 787   0   0   0   0   0   0   3   0   0   1]\n",
+      " [  0   0 828   1   1   0   0   1   0   0   0   0]\n",
+      " [  1   0   1 780   0   0   0   0   1   0   0   0]\n",
+      " [  0   0   5   0 735   0   0   1   0   0   0   1]\n",
+      " [  0   1   0   0   0 807   3   0   2   0   0   0]\n",
+      " [  0   0   0   0   0   0 714   0   0   0   0   0]\n",
+      " [  0   0   1   0   0   0   0 584   1   0   1   0]\n",
+      " [  0   0   1   0   0   0   0   0 672   0   0   0]\n",
+      " [  0   1   0   0   0   1   0   0   3 688   0   2]\n",
+      " [  0   0   0   0   0   0   0   0   0   0 689   0]\n",
+      " [  0   1   0   1   0   0   0   0   0   0   0 540]]\n",
+      "[[147   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0 789   0   0   0   0   1   0   0   0   0   1]\n",
+      " [  0   0 829   0   2   0   0   0   0   0   0   0]\n",
+      " [  0   0   0 782   0   0   0   0   0   1   0   0]\n",
+      " [  0   0   0   1 740   0   0   0   1   0   0   0]\n",
+      " [  0   0   0   0   0 812   0   0   0   1   0   0]\n",
+      " [  0   0   0   0   0   0 714   0   0   0   0   0]\n",
+      " [  0   0   0   0   2   1   0 584   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0   0 671   0   0   2]\n",
+      " [  0   3   0   0   0   0   0   0   0 692   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   0 689   0]\n",
+      " [  0   0   0   1   0   0   0   0   0   0   0 541]]\n",
+      "[[147   0   0   0   0   0   0   0   0   0   0   0]\n",
+      " [  0 790   0   0   1   0   0   0   0   0   0   0]\n",
+      " [  0   0 830   0   0   0   0   1   0   0   0   0]\n",
+      " [  0   0   0 782   0   0   0   0   0   1   0   0]\n",
+      " [  0   0   0   0 742   0   0   0   0   0   0   0]\n",
+      " [  0   0   1   0   0 812   0   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0 714   0   0   0   0   0]\n",
+      " [  0   0   0   0   0   0   0 587   0   0   0   0]\n",
+      " [  0   0   1   0   1   0   0   0 670   1   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0 695   0   0]\n",
+      " [  0   0   0   0   0   0   0   0   0   1 688   0]\n",
+      " [  0   0   0   0   1   0   0   0   0   0   0 541]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       1.00      1.00      1.00       790\n",
-      "           2       0.99      1.00      0.99       781\n",
-      "           3       1.00      1.00      1.00       825\n",
-      "           4       1.00      0.99      0.99       803\n",
-      "           5       1.00      1.00      1.00       833\n",
+      "           0       0.99      0.99      0.99       147\n",
+      "           1       1.00      0.99      1.00       791\n",
+      "           2       0.99      1.00      0.99       831\n",
+      "           3       0.99      1.00      1.00       783\n",
+      "           4       1.00      0.99      0.99       742\n",
+      "           5       1.00      0.99      1.00       813\n",
+      "           6       1.00      1.00      1.00       714\n",
+      "           7       1.00      0.99      1.00       587\n",
+      "           8       0.99      1.00      0.99       673\n",
+      "           9       1.00      0.99      0.99       695\n",
+      "          10       1.00      1.00      1.00       689\n",
+      "          11       0.99      1.00      0.99       542\n",
       "\n",
-      "   micro avg       1.00      1.00      1.00      4032\n",
-      "   macro avg       1.00      1.00      1.00      4032\n",
-      "weighted avg       1.00      1.00      1.00      4032\n",
+      "   micro avg       1.00      1.00      1.00      8007\n",
+      "   macro avg       1.00      0.99      0.99      8007\n",
+      "weighted avg       1.00      1.00      1.00      8007\n",
       "\n",
-      "The testing accuracy for imported Neural Network is  0.9962797619047619\n",
-      "wiper\n",
-      "time taken =  0:00:00.147488\n"
+      "The testing accuracy for imported Neural Network is  0.9952541526164606\n",
+      "number7\n",
+      "time taken =  0:00:02.080607\n"
      ]
     }
    ],
@@ -84,7 +112,7 @@
     "\n",
     "start_time = datetime.datetime.now()\n",
     "\n",
-    "mlp = MLPClassifier(hidden_layer_sizes = (45, 36, 27, 18, 9))\n",
+    "mlp = MLPClassifier(hidden_layer_sizes = (50, 45, 40, 35, 30, 25, 20))\n",
     "mlp.fit(X_train, y_train)\n",
     "\n",
     "end_time = datetime.datetime.now()\n",
@@ -138,6 +166,26 @@
     "end_time = datetime.datetime.now()\n",
     "time_taken = end_time - start_time\n",
     "print(\"time taken = \", time_taken)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sidestep'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapping[predictions[1]]"
    ]
   },
   {
