--- a/Machine Learning/model/MLP.ipynb
+++ b/Machine Learning/model/MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -11,71 +11,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy for Neural Network is  0.9940280266100023\n",
-      "The testing accuracy for Neural Network is  0.9930008748906387\n",
-      "time taken for mlp =  0:00:42.040605\n",
+      "The training accuracy for Neural Network is  0.9881913356128168\n",
+      "The testing accuracy for Neural Network is  0.9881569207994079\n",
+      "time taken for mlp =  0:03:26.683410\n",
       "The training accuracy for Random Forestry is  1.0\n",
-      "The testing accuracy for Random Forestry is  0.9915010623672041\n",
-      "time taken for rf =  0:00:51.894814\n",
+      "The testing accuracy for Random Forestry is  0.977688484720313\n",
+      "time taken for rf =  0:01:27.890979\n",
       "MLP:\n",
-      "[[ 3 13 17 19 22 17 14  7 12  8 12 10]\n",
-      " [22 83 83 82 80 71 72 61 61 59 73 62]\n",
-      " [16 95 89 75 93 79 62 60 71 76 60 48]\n",
-      " [14 76 86 99 84 89 67 66 67 55 68 51]\n",
-      " [17 74 83 80 71 66 69 49 62 62 70 47]\n",
-      " [11 85 91 82 87 70 71 64 75 73 62 51]\n",
-      " [18 68 84 74 41 64 67 49 70 60 63 44]\n",
-      " [ 7 56 57 68 56 53 41 42 48 46 46 34]\n",
-      " [16 64 83 66 69 65 59 37 61 53 48 36]\n",
-      " [16 65 78 69 67 72 64 38 56 53 63 58]\n",
-      " [12 68 85 59 70 77 61 43 55 67 57 58]\n",
-      " [ 8 51 51 48 44 57 45 43 40 36 43 30]]\n",
-      "             precision    recall  f1-score   support\n",
+      "[[ 150    0    0    0    0    0    0    0    0    0    0    0]\n",
+      " [   0 1118  101    0    0    0    0    0    1    0    0    0]\n",
+      " [   0    1 1204    0    0    0    0    0    0    0    0    0]\n",
+      " [   1    0    2  803    0    0    0    0    0    0    0    0]\n",
+      " [   0    0    0    0  749    0    0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0  812    0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0  695    0    0    0    0    0]\n",
+      " [   0    0    6    0    0    0    0  871    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0 1041    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0  669    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0  697    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0  536]]\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00       154\n",
-      "          1       0.97      0.98      0.98       809\n",
-      "          2       0.97      0.97      0.97       824\n",
-      "          3       1.00      1.00      1.00       822\n",
-      "          4       1.00      0.99      1.00       750\n",
-      "          5       1.00      1.00      1.00       822\n",
-      "          6       1.00      1.00      1.00       702\n",
-      "          7       1.00      0.99      0.99       554\n",
-      "          8       1.00      1.00      1.00       657\n",
-      "          9       1.00      1.00      1.00       699\n",
-      "         10       1.00      1.00      1.00       712\n",
-      "         11       1.00      1.00      1.00       496\n",
+      "           0       0.99      1.00      1.00       150\n",
+      "           1       1.00      0.92      0.96      1220\n",
+      "           2       0.92      1.00      0.96      1205\n",
+      "           3       1.00      1.00      1.00       806\n",
+      "           4       1.00      1.00      1.00       749\n",
+      "           5       1.00      1.00      1.00       812\n",
+      "           6       1.00      1.00      1.00       695\n",
+      "           7       1.00      0.99      1.00       877\n",
+      "           8       1.00      1.00      1.00      1041\n",
+      "           9       1.00      1.00      1.00       669\n",
+      "          10       1.00      1.00      1.00       697\n",
+      "          11       1.00      1.00      1.00       536\n",
       "\n",
-      "avg / total       0.99      0.99      0.99      8001\n",
+      "   micro avg       0.99      0.99      0.99      9457\n",
+      "   macro avg       0.99      0.99      0.99      9457\n",
+      "weighted avg       0.99      0.99      0.99      9457\n",
       "\n",
       "RF:\n",
-      "[[154   0   0   0   0   0   0   0   0   0   0   0]\n",
-      " [  0 773  36   0   0   0   0   0   0   0   0   0]\n",
-      " [  0  31 793   0   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0 822   0   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0 750   0   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0 822   0   0   0   0   0   0]\n",
-      " [  0   0   0   0   0   0 702   0   0   0   0   0]\n",
-      " [  0   0   0   1   0   0   0 553   0   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0 657   0   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0 699   0   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0 712   0]\n",
-      " [  0   0   0   0   0   0   0   0   0   0   0 496]]\n",
-      "             precision    recall  f1-score   support\n",
+      "[[ 150    0    0    0    0    0    0    0    0    0    0    0]\n",
+      " [   0 1124   96    0    0    0    0    0    0    0    0    0]\n",
+      " [   0  112 1093    0    0    0    0    0    0    0    0    0]\n",
+      " [   1    0    0  805    0    0    0    0    0    0    0    0]\n",
+      " [   0    0    1    0  747    0    0    0    0    0    0    1]\n",
+      " [   0    0    0    0    0  812    0    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0  695    0    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0  877    0    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0 1041    0    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0  669    0    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0  697    0]\n",
+      " [   0    0    0    0    0    0    0    0    0    0    0  536]]\n",
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "          0       1.00      1.00      1.00       154\n",
-      "          1       0.96      0.96      0.96       809\n",
-      "          2       0.96      0.96      0.96       824\n",
-      "          3       1.00      1.00      1.00       822\n",
-      "          4       1.00      1.00      1.00       750\n",
-      "          5       1.00      1.00      1.00       822\n",
-      "          6       1.00      1.00      1.00       702\n",
-      "          7       1.00      1.00      1.00       554\n",
-      "          8       1.00      1.00      1.00       657\n",
-      "          9       1.00      1.00      1.00       699\n",
-      "         10       1.00      1.00      1.00       712\n",
-      "         11       1.00      1.00      1.00       496\n",
+      "           0       0.99      1.00      1.00       150\n",
+      "           1       0.91      0.92      0.92      1220\n",
+      "           2       0.92      0.91      0.91      1205\n",
+      "           3       1.00      1.00      1.00       806\n",
+      "           4       1.00      1.00      1.00       749\n",
+      "           5       1.00      1.00      1.00       812\n",
+      "           6       1.00      1.00      1.00       695\n",
+      "           7       1.00      1.00      1.00       877\n",
+      "           8       1.00      1.00      1.00      1041\n",
+      "           9       1.00      1.00      1.00       669\n",
+      "          10       1.00      1.00      1.00       697\n",
+      "          11       1.00      1.00      1.00       536\n",
       "\n",
-      "avg / total       0.99      0.99      0.99      8001\n",
+      "   micro avg       0.98      0.98      0.98      9457\n",
+      "   macro avg       0.98      0.99      0.99      9457\n",
+      "weighted avg       0.98      0.98      0.98      9457\n",
       "\n",
       "done\n"
      ]
@@ -169,8 +173,6 @@
     "\n",
     "filename_rd = \"RD.sav\"\n",
     "pickle.dump(random_forest, open(filename_rd, 'wb'))\n",
-    "# joblib.dump(mlp, filename_mlp)\n",
-    "# joblib.dump(random_forest, filename_rd)\n",
     "\n",
     "mapping = {1 : 'chicken', 2 : 'number7', 3 : 'sidestep', 4 : 'turnclap', 5 : 'wipers',\n",
     "           6 : 'numbersix', 7 : 'salute', 8 : 'mermaid', 9 : 'swing', 10 : 'cowboy', 11 : 'finisher'}\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -191,83 +193,83 @@
      "output_type": "stream",
      "text": [
       "Feature ranking:\n",
-      "1. feature 6 (0.044223)\n",
-      "2. feature 71 (0.043480)\n",
-      "3. feature 0 (0.037834)\n",
-      "4. feature 3 (0.031414)\n",
-      "5. feature 1 (0.029424)\n",
-      "6. feature 53 (0.029170)\n",
-      "7. feature 17 (0.027567)\n",
-      "8. feature 7 (0.026130)\n",
-      "9. feature 62 (0.025500)\n",
-      "10. feature 40 (0.025381)\n",
-      "11. feature 35 (0.025351)\n",
-      "12. feature 44 (0.025289)\n",
-      "13. feature 18 (0.022821)\n",
-      "14. feature 45 (0.022434)\n",
-      "15. feature 64 (0.021858)\n",
-      "16. feature 4 (0.021740)\n",
-      "17. feature 69 (0.020390)\n",
-      "18. feature 46 (0.020048)\n",
-      "19. feature 57 (0.019906)\n",
-      "20. feature 70 (0.018853)\n",
-      "21. feature 58 (0.018463)\n",
-      "22. feature 38 (0.017620)\n",
-      "23. feature 19 (0.017129)\n",
-      "24. feature 59 (0.016082)\n",
-      "25. feature 51 (0.015713)\n",
-      "26. feature 56 (0.015505)\n",
-      "27. feature 39 (0.015426)\n",
-      "28. feature 63 (0.015222)\n",
-      "29. feature 24 (0.014290)\n",
-      "30. feature 66 (0.014120)\n",
-      "31. feature 54 (0.013894)\n",
-      "32. feature 28 (0.013711)\n",
-      "33. feature 41 (0.013493)\n",
-      "34. feature 12 (0.013103)\n",
-      "35. feature 52 (0.013027)\n",
-      "36. feature 22 (0.011132)\n",
-      "37. feature 49 (0.010963)\n",
-      "38. feature 48 (0.010873)\n",
-      "39. feature 65 (0.010849)\n",
-      "40. feature 20 (0.010708)\n",
-      "41. feature 13 (0.010335)\n",
-      "42. feature 67 (0.010073)\n",
-      "43. feature 42 (0.009887)\n",
-      "44. feature 34 (0.009318)\n",
-      "45. feature 60 (0.008877)\n",
-      "46. feature 25 (0.008690)\n",
-      "47. feature 2 (0.008307)\n",
-      "48. feature 55 (0.008279)\n",
-      "49. feature 21 (0.007952)\n",
-      "50. feature 61 (0.007476)\n",
-      "51. feature 9 (0.007463)\n",
-      "52. feature 26 (0.006230)\n",
-      "53. feature 36 (0.006143)\n",
-      "54. feature 43 (0.005854)\n",
-      "55. feature 33 (0.005533)\n",
-      "56. feature 10 (0.005515)\n",
-      "57. feature 47 (0.005399)\n",
-      "58. feature 37 (0.005249)\n",
-      "59. feature 68 (0.004932)\n",
-      "60. feature 14 (0.004784)\n",
-      "61. feature 32 (0.004279)\n",
-      "62. feature 23 (0.004218)\n",
-      "63. feature 31 (0.004093)\n",
-      "64. feature 27 (0.004040)\n",
-      "65. feature 5 (0.003239)\n",
-      "66. feature 11 (0.003188)\n",
-      "67. feature 30 (0.002400)\n",
-      "68. feature 16 (0.001923)\n",
-      "69. feature 15 (0.001841)\n",
-      "70. feature 50 (0.001770)\n",
-      "71. feature 29 (0.001641)\n",
-      "72. feature 8 (0.000937)\n",
-      "mean: 0.278966\n",
-      "max: 0.173537\n",
-      "iqr: 0.253739\n",
-      "mad: 0.293758\n",
-      "std: 0.000000\n"
+      "1. feature 6 (0.056817)\n",
+      "2. feature 0 (0.047357)\n",
+      "3. feature 35 (0.035165)\n",
+      "4. feature 1 (0.033430)\n",
+      "5. feature 71 (0.031428)\n",
+      "6. feature 17 (0.030776)\n",
+      "7. feature 3 (0.029086)\n",
+      "8. feature 69 (0.027480)\n",
+      "9. feature 64 (0.025140)\n",
+      "10. feature 53 (0.024577)\n",
+      "11. feature 33 (0.021420)\n",
+      "12. feature 28 (0.020393)\n",
+      "13. feature 57 (0.020334)\n",
+      "14. feature 58 (0.018640)\n",
+      "15. feature 22 (0.018184)\n",
+      "16. feature 4 (0.018041)\n",
+      "17. feature 26 (0.018039)\n",
+      "18. feature 46 (0.018039)\n",
+      "19. feature 20 (0.017684)\n",
+      "20. feature 44 (0.017418)\n",
+      "21. feature 21 (0.016980)\n",
+      "22. feature 23 (0.016050)\n",
+      "23. feature 62 (0.015983)\n",
+      "24. feature 59 (0.015562)\n",
+      "25. feature 7 (0.014878)\n",
+      "26. feature 56 (0.014063)\n",
+      "27. feature 40 (0.013879)\n",
+      "28. feature 70 (0.013235)\n",
+      "29. feature 63 (0.013120)\n",
+      "30. feature 12 (0.012938)\n",
+      "31. feature 9 (0.012578)\n",
+      "32. feature 27 (0.012108)\n",
+      "33. feature 38 (0.011967)\n",
+      "34. feature 34 (0.011498)\n",
+      "35. feature 30 (0.011206)\n",
+      "36. feature 13 (0.011183)\n",
+      "37. feature 45 (0.011119)\n",
+      "38. feature 66 (0.010909)\n",
+      "39. feature 51 (0.010880)\n",
+      "40. feature 42 (0.010787)\n",
+      "41. feature 39 (0.010383)\n",
+      "42. feature 54 (0.010262)\n",
+      "43. feature 60 (0.010156)\n",
+      "44. feature 2 (0.010139)\n",
+      "45. feature 24 (0.010028)\n",
+      "46. feature 48 (0.009988)\n",
+      "47. feature 10 (0.009065)\n",
+      "48. feature 49 (0.008784)\n",
+      "49. feature 41 (0.008695)\n",
+      "50. feature 18 (0.008451)\n",
+      "51. feature 52 (0.007837)\n",
+      "52. feature 19 (0.007539)\n",
+      "53. feature 31 (0.007226)\n",
+      "54. feature 25 (0.006759)\n",
+      "55. feature 67 (0.006435)\n",
+      "56. feature 65 (0.006325)\n",
+      "57. feature 29 (0.006321)\n",
+      "58. feature 55 (0.006159)\n",
+      "59. feature 61 (0.006104)\n",
+      "60. feature 47 (0.006025)\n",
+      "61. feature 68 (0.006021)\n",
+      "62. feature 14 (0.005975)\n",
+      "63. feature 36 (0.005821)\n",
+      "64. feature 32 (0.004665)\n",
+      "65. feature 11 (0.004414)\n",
+      "66. feature 37 (0.004081)\n",
+      "67. feature 5 (0.003890)\n",
+      "68. feature 16 (0.002893)\n",
+      "69. feature 43 (0.002838)\n",
+      "70. feature 15 (0.002389)\n",
+      "71. feature 8 (0.002322)\n",
+      "72. feature 50 (0.001637)\n",
+      "mean: 0.308169\n",
+      "max: 0.249718\n",
+      "iqr: 0.184756\n",
+      "mad: 0.257357\n",
+      "median: 0.000000\n"
      ]
     }
    ],
@@ -305,7 +307,7 @@
     "print(\"max: %f\" %(importance_max))\n",
     "print(\"iqr: %f\" %(importance_iqr))\n",
     "print(\"mad: %f\" %(importance_mad))\n",
-    "print(\"std: %f\" %(importance_std))"
+    "print(\"median: %f\" %(importance_std))"
    ]
   }
  ],
