--- a/Machine Learning/model/Simulation.ipynb
+++ b/Machine Learning/model/Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "    # read data\n",
     "#     data = pd.read_csv('/home/pi/3002/readings.csv')\n",
     "    data = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\test data\\%s_dataset.csv' %filename)\n",
-    "    cleaned_data = data.head(110)\n",
+    "    cleaned_data = data.head(121)\n",
     "    \n",
     "    cleaned_data = cleaned_data.drop(['voltage','current','power','energy', 'activity'],axis =1).copy() #delete column\n",
     "#     cleaned_data = cleaned_data.astype(float)\n",
@@ -32,18 +32,21 @@
     "    max_data = pd.DataFrame()\n",
     "    iqr_data = pd.DataFrame()\n",
     "    mad_data = pd.DataFrame()\n",
+    "    i = 0\n",
+    "    \n",
+    "    for count in range(1):\n",
+    "        a = cleaned_data[i:i+110].copy()\n",
+    "        a.loc['mean'] = a.mean()\n",
+    "        a.loc['max'] = a.max()\n",
+    "        a.loc['iqr'] = a.quantile(0.75) - a.quantile(0.25)\n",
+    "        a.loc['mad'] = a.mad()\n",
     "\n",
-    "    a = cleaned_data[0:110].copy()\n",
-    "    a.loc['mean'] = a.mean()\n",
-    "    a.loc['max'] = a.max()\n",
-    "    a.loc['iqr'] = a.quantile(0.75) - a.quantile(0.25)\n",
-    "    a.loc['mad'] = a.mad()\n",
-    "\n",
-    "    mean_data = mean_data.append(a.loc['mean'], ignore_index=True)\n",
-    "    max_data = max_data.append(a.loc['max'], ignore_index=True)\n",
-    "    iqr_data = iqr_data.append(a.loc['iqr'], ignore_index=True)\n",
-    "    mad_data = mad_data.append(a.loc['mad'], ignore_index=True)\n",
-    "\n",
+    "        mean_data = mean_data.append(a.loc['mean'], ignore_index=True)\n",
+    "        max_data = max_data.append(a.loc['max'], ignore_index=True)\n",
+    "        iqr_data = iqr_data.append(a.loc['iqr'], ignore_index=True)\n",
+    "        mad_data = mad_data.append(a.loc['mad'], ignore_index=True)\n",
+    "        i += 11\n",
+    "        \n",
     "    # rearrangement of columns\n",
     "    mean_data = mean_data.rename(index=str, columns={'AcX 1': 'mean_AcX 1', 'AcY 1': 'mean_AcY 1', 'AcZ 1': 'mean_AcZ 1', \n",
     "                                                     'GyX 1': 'mean_GyX 1', 'GyY 1': 'mean_GyY 1', 'GyZ 1': 'mean_GyZ 1',\n",
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,18 +124,27 @@
     "    rd_model = pickle.load(open(filename_rd, 'rb'))\n",
     "\n",
     "    \n",
+    "#     while(True):\n",
+    "#         data = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\test data\\extracted_dataset.csv')\n",
+    "#         prediction_mlp = mlp_model.predict(data)\n",
+    "#         prediction_rd = rd_model.predict(data)\n",
+    "# #         print(prediction_mlp, prediction_rd)\n",
+    "#         if (prediction_mlp == prediction_rd):\n",
+    "#             break\n",
+    "#         data_processing(filename)\n",
+    "        \n",
+    "            \n",
+    "    mapping = {0 : 'rest', 1 : 'chicken', 2 : 'number7', 3 : 'sidestep', 4 : 'turnclap', 5 : 'wipers',\n",
+    "               6 : 'numbersix', 7 : 'salute', 8 : 'mermaid', 9 : 'swing', 10 : 'cowboy', 11 : 'finisher'}\n",
     "    while(True):\n",
     "        data = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\test data\\extracted_dataset.csv')\n",
     "        prediction_mlp = mlp_model.predict(data)\n",
     "        prediction_rd = rd_model.predict(data)\n",
-    "#         print(prediction_mlp, prediction_rd)\n",
-    "\n",
-    "        if (prediction_mlp == prediction_rd):\n",
+    "        print(mapping[prediction_mlp[0]], mapping[prediction_rd[0]])\n",
+    "        if ((prediction_mlp[0] == prediction_rd[0])):\n",
     "            break\n",
     "        data_processing(filename)\n",
-    "        \n",
-    "    mapping = {0 : 'rest', 1 : 'chicken', 2 : 'number7', 3 : 'sidestep', 4 : 'turnclap', 5 : 'wipers',\n",
-    "               6 : 'numbersix', 7 : 'salute', 8 : 'mermaid', 9 : 'swing', 10 : 'cowboy', 11 : 'finisher'}\n",
+    "\n",
     "          \n",
     "    return mapping[prediction_rd[0]]"
    ]
@@ -158,36 +170,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time taken for saving =  0:00:00\n",
+      "rest rest\n",
       "rest\n",
-      "time taken for saving =  0:00:00\n",
+      "chicken chicken\n",
       "chicken\n",
-      "time taken for saving =  0:00:00\n",
+      "number7 number7\n",
       "number7\n",
-      "time taken for saving =  0:00:00\n",
+      "sidestep sidestep\n",
       "sidestep\n",
-      "time taken for saving =  0:00:00\n",
+      "turnclap turnclap\n",
       "turnclap\n",
-      "time taken for saving =  0:00:00.000997\n",
+      "wipers wipers\n",
       "wipers\n",
-      "time taken for saving =  0:00:00\n",
+      "numbersix numbersix\n",
       "numbersix\n",
-      "time taken for saving =  0:00:00\n",
+      "salute salute\n",
       "salute\n",
-      "time taken for saving =  0:00:00\n",
+      "mermaid mermaid\n",
       "mermaid\n",
-      "time taken for saving =  0:00:00.000996\n",
+      "swing swing\n",
       "swing\n",
-      "time taken for saving =  0:00:00\n",
+      "cowboy cowboy\n",
       "cowboy\n",
-      "time taken for saving =  0:00:00\n",
+      "finisher finisher\n",
       "finisher\n"
      ]
     }
