--- a/Machine Learning/data processing/DataProcessing.ipynb
+++ b/Machine Learning/data processing/DataProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,11 +24,11 @@
     "#                                                             'AcX 3', 'AcY 3', 'AcZ 3', 'GyX 3', 'GyY 3', 'GyZ 3'])\n",
     "    cleaned_data = cleaned_data.drop(['activity', 'voltage', 'current', 'power', 'energy'],  axis=1)\n",
     "    mean_data = pd.DataFrame()\n",
-    "#     max_data = pd.DataFrame()\n",
+    "    max_data = pd.DataFrame()\n",
     "    iqr_data = pd.DataFrame()\n",
     "    mad_data = pd.DataFrame()\n",
     "#     median_data = pd.DataFrame()\n",
-    "    std_data = pd.DataFrame()\n",
+    "#     std_data = pd.DataFrame()\n",
     "    \n",
     "    i = 0\n",
     "    row_count = len(cleaned_data.index)\n",
@@ -38,18 +38,18 @@
     "        a = cleaned_data[i:i+110:].copy()\n",
     "\n",
     "        a.loc['mean'] = a.mean()\n",
-    "#         a.loc['max'] = a.max()\n",
+    "        a.loc['max'] = a.max()\n",
     "        a.loc['iqr'] = a.quantile(0.75) - a.quantile(0.25)\n",
     "        a.loc['mad'] = a.mad()\n",
     "#         a.loc['median'] = a.median()\n",
-    "        a.loc['std'] = a.std()\n",
+    "#         a.loc['std'] = a.std()\n",
     "        \n",
     "        mean_data = mean_data.append(a.loc['mean'], ignore_index=True)\n",
-    "#         max_data = max_data.append(a.loc['max'], ignore_index=True)\n",
+    "        max_data = max_data.append(a.loc['max'], ignore_index=True)\n",
     "        iqr_data = iqr_data.append(a.loc['iqr'], ignore_index=True)\n",
     "        mad_data = mad_data.append(a.loc['mad'], ignore_index=True)\n",
     "#         median_data = median_data.append(a.loc['median'], ignore_index=True)\n",
-    "        std_data = mad_data.append(a.loc['std'], ignore_index=True)\n",
+    "#         std_data = mad_data.append(a.loc['std'], ignore_index=True)\n",
     "        \n",
     "        i += 11\n",
     "        \n",
@@ -61,12 +61,12 @@
     "                                                      'AcX 3': 'mean_AcX 3', 'AcY 3': 'mean_AcY 3', 'AcZ 3': 'mean_AcZ 3', \n",
     "                                                      'GyX 3': 'mean_GyX 3', 'GyY 3': 'mean_GyY 3', 'GyZ 3': 'mean_GyZ 3',})\n",
     "  \n",
-    "#     max_data = max_data.rename(index=str, columns=  {'AcX 1': 'max_AcX 1', 'AcY 1': 'max_AcY 1', 'AcZ 1': 'max_AcZ 1', \n",
-    "#                                                      'GyX 1': 'max_GyX 1', 'GyY 1': 'max_GyY 1', 'GyZ 1': 'max_GyZ 1',\n",
-    "#                                                      'AcX 2': 'max_AcX 2', 'AcY 2': 'max_AcY 2', 'AcZ 2': 'max_AcZ 2', \n",
-    "#                                                      'GyX 2': 'max_GyX 2', 'GyY 2': 'max_GyY 2', 'GyZ 2': 'max_GyZ 2',\n",
-    "#                                                      'AcX 3': 'max_AcX 3', 'AcY 3': 'max_AcY 3', 'AcZ 3': 'max_AcZ 3', \n",
-    "#                                                      'GyX 3': 'max_GyX 3', 'GyY 3': 'max_GyY 3', 'GyZ 3': 'max_GyZ 3',}) \n",
+    "    max_data = max_data.rename(index=str, columns=  {'AcX 1': 'max_AcX 1', 'AcY 1': 'max_AcY 1', 'AcZ 1': 'max_AcZ 1', \n",
+    "                                                     'GyX 1': 'max_GyX 1', 'GyY 1': 'max_GyY 1', 'GyZ 1': 'max_GyZ 1',\n",
+    "                                                     'AcX 2': 'max_AcX 2', 'AcY 2': 'max_AcY 2', 'AcZ 2': 'max_AcZ 2', \n",
+    "                                                     'GyX 2': 'max_GyX 2', 'GyY 2': 'max_GyY 2', 'GyZ 2': 'max_GyZ 2',\n",
+    "                                                     'AcX 3': 'max_AcX 3', 'AcY 3': 'max_AcY 3', 'AcZ 3': 'max_AcZ 3', \n",
+    "                                                     'GyX 3': 'max_GyX 3', 'GyY 3': 'max_GyY 3', 'GyZ 3': 'max_GyZ 3',}) \n",
     "    \n",
     "    iqr_data = iqr_data.rename(index=str, columns=  {'AcX 1': 'iqr_AcX 1', 'AcY 1': 'iqr_AcY 1', 'AcZ 1': 'iqr_AcZ 1', \n",
     "                                                     'GyX 1': 'iqr_GyX 1', 'GyY 1': 'iqr_GyY 1', 'GyZ 1': 'iqr_GyZ 1',\n",
@@ -82,12 +82,12 @@
     "                                                     'AcX 3': 'mad_AcX 3', 'AcY 3': 'mad_AcY 3', 'AcZ 3': 'mad_AcZ 3', \n",
     "                                                     'GyX 3': 'mad_GyX 3', 'GyY 3': 'mad_GyY 3', 'GyZ 3': 'mad_GyZ 3',}) \n",
     "    \n",
-    "    std_data = std_data.rename(index=str, columns=  {'AcX 1': 'std_AcX 1', 'AcY 1': 'std_AcY 1', 'AcZ 1': 'std_AcZ 1', \n",
-    "                                                     'GyX 1': 'std_GyX 1', 'GyY 1': 'std_GyY 1', 'GyZ 1': 'std_GyZ 1',\n",
-    "                                                     'AcX 2': 'std_AcX 2', 'AcY 2': 'std_AcY 2', 'AcZ 2': 'std_AcZ 2', \n",
-    "                                                     'GyX 2': 'std_GyX 2', 'GyY 2': 'std_GyY 2', 'GyZ 2': 'std_GyZ 2',\n",
-    "                                                     'AcX 3': 'std_AcX 3', 'AcY 3': 'std_AcY 3', 'AcZ 3': 'std_AcZ 3', \n",
-    "                                                     'GyX 3': 'std_GyX 3', 'GyY 3': 'std_GyY 3', 'GyZ 3': 'std_GyZ 3',}) \n",
+    "#     std_data = std_data.rename(index=str, columns=  {'AcX 1': 'std_AcX 1', 'AcY 1': 'std_AcY 1', 'AcZ 1': 'std_AcZ 1', \n",
+    "#                                                      'GyX 1': 'std_GyX 1', 'GyY 1': 'std_GyY 1', 'GyZ 1': 'std_GyZ 1',\n",
+    "#                                                      'AcX 2': 'std_AcX 2', 'AcY 2': 'std_AcY 2', 'AcZ 2': 'std_AcZ 2', \n",
+    "#                                                      'GyX 2': 'std_GyX 2', 'GyY 2': 'std_GyY 2', 'GyZ 2': 'std_GyZ 2',\n",
+    "#                                                      'AcX 3': 'std_AcX 3', 'AcY 3': 'std_AcY 3', 'AcZ 3': 'std_AcZ 3', \n",
+    "#                                                      'GyX 3': 'std_GyX 3', 'GyY 3': 'std_GyY 3', 'GyZ 3': 'std_GyZ 3',}) \n",
     "    \n",
     "#     median_data = median_data.rename(index=str, columns=  {'AcX 1': 'median_AcX 1', 'AcY 1': 'median_AcY 1', 'AcZ 1': 'median_AcZ 1', \n",
     "#                                                      'GyX 1': 'median_GyX 1', 'GyY 1': 'median_GyY 1', 'GyZ 1': 'median_GyZ 1',\n",
@@ -98,7 +98,7 @@
     "    \n",
     "    \n",
     "    # combine features extracted into 1 \n",
-    "    extracted_data = mean_data.join(std_data).join(iqr_data).join(mad_data)\n",
+    "    extracted_data = mean_data.join(max_data).join(iqr_data).join(mad_data)\n",
     "    \n",
     "    mapping = {'rest' : 0, 'chicken' : 1, 'number7' : 2, 'sidestep' : 3, 'turnclap' : 4, 'wipers' : 5,\n",
     "               'numbersix' : 6, 'salute' : 7, 'mermaid' : 8, 'swing' : 9, 'cowboy' : 10, 'finisher' : 11}\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
