--- a/Machine Learning/data processing/CombineRawData.ipynb
+++ b/Machine Learning/data processing/CombineRawData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,6 @@
       "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
       "C:\\Users\\User\\Anaconda3_32bit\\lib\\site-packages\\ipykernel_launcher.py:117: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=False'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
-      "\n",
-      "C:\\Users\\User\\Anaconda3_32bit\\lib\\site-packages\\ipykernel_launcher.py:118: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -59,34 +52,34 @@
     "# wipers = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\wipers_dataset.csv')\n",
     "# number6 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\numbersix_dataset.csv')\n",
     "salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\salute_dataset.csv')\n",
-    "mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\mermaid_dataset.csv')\n",
+    "# mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\mermaid_dataset.csv')\n",
     "# swing = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\swing_dataset.csv')\n",
     "# cowboy = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\cowboy_dataset.csv')\n",
     "# finisher = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\finisher_dataset.csv')\n",
     "# rest =  = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\rest_dataset.csv')\n",
     "\n",
-    "bobby_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newChicken.csv')\n",
-    "bobby_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newNumber7.csv')\n",
+    "# bobby_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newChicken.csv')\n",
+    "# bobby_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newNumber7.csv')\n",
     "# bobby_sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\2\\sidestep.csv')\n",
     "# bobby_turnclap = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\turnclap.csv')\n",
     "# bobby_turnclap2 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\turnclap2.csv')\n",
     "# bobby_wiper = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\wiper.csv')\n",
-    "bobby_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newSalute.csv')\n",
-    "bobby_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newMermaid.csv')\n",
+    "# bobby_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newSalute.csv')\n",
+    "# bobby_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\bobby\\newMermaid.csv')\n",
     "\n",
-    "beeyee_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newChicken.csv')\n",
-    "beeyee_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newNumber7.csv')\n",
-    "beeyee_salute =  pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newSalute.csv')\n",
-    "beeyee_mermaid =  pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newMermaid.csv')\n",
+    "# beeyee_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newChicken.csv')\n",
+    "# beeyee_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newNumber7.csv')\n",
+    "# beeyee_salute =  pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newSalute.csv')\n",
+    "# beeyee_mermaid =  pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\newMermaid.csv')\n",
     "# beeyee_sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\sidestep.csv')\n",
     "# beeyee_turnclap = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\turnclap.csv')\n",
     "# beeyee_turnclap2 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\turnclap2.csv')\n",
     "# beeyee_wiper = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\beeyee\\wiper.csv')\n",
     "\n",
-    "henry_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newChicken.csv')\n",
-    "henry_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newNumber7.csv')\n",
-    "henry_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newSalute.csv')\n",
-    "henry_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newMermaid.csv')\n",
+    "henry_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newerChicken.csv')\n",
+    "henry_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newerNumber7.csv')\n",
+    "henry_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newerSalute.csv')\n",
+    "# henry_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\newMermaid.csv')\n",
     "# henry_number7_2 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\2\\number7-2.csv')\n",
     "# henry_sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\2\\sidestep.csv')\n",
     "# henry_turnclap1 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\henry\\2\\turnclap1.csv')\n",
@@ -104,10 +97,10 @@
     "# kabir_turnclap3 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\kabir\\2\\turnclap3.csv')\n",
     "# kabir_wiper = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\kabir\\2\\wiper.csv')\n",
     "\n",
-    "zech_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newChicken.csv')\n",
-    "zech_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newNumber7.csv')\n",
-    "zech_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newSalute.csv')\n",
-    "zech_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newMermaid.csv')\n",
+    "# zech_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newChicken.csv')\n",
+    "# zech_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newNumber7.csv')\n",
+    "# zech_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newSalute.csv')\n",
+    "# zech_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\newMermaid.csv')\n",
     "# zech_sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\2\\sidestep.csv')\n",
     "# zech_turnclap1 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\2\\turnclap1.csv')\n",
     "# zech_turnclap2 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\2\\turnclap2.csv')\n",
@@ -116,10 +109,10 @@
     "# zech_turnclap5 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\2\\turnclap5.csv')\n",
     "# zech_wiper = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\zech\\2\\wiper.csv')\n",
     "\n",
-    "hongjing_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newChicken.csv')\n",
-    "hongjing_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newNumber7.csv')\n",
-    "hongjing_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newSalute.csv')\n",
-    "hongjing_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newMermaid.csv')\n",
+    "# hongjing_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newChicken.csv')\n",
+    "# hongjing_number7 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newNumber7.csv')\n",
+    "# hongjing_salute = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newSalute.csv')\n",
+    "# hongjing_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\newMermaid.csv')\n",
     "# hongjing_sidestep = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\2\\sidestep.csv')\n",
     "# hongjing_turnclap1 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\2\\turnclap1.csv')\n",
     "# hongjing_turnclap2 = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\hongjing\\2\\turnclap2.csv')\n",
@@ -131,10 +124,10 @@
     "random_chicken = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\random\\chicken.csv')\n",
     "random_mermaid = pd.read_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\random\\mermaid.csv')\n",
     "\n",
-    "frames_chicken = [bobby_chicken, beeyee_chicken, henry_chicken, zech_chicken, hongjing_chicken, chicken, random_chicken]\n",
-    "frames_number7 = [bobby_number7, beeyee_number7, henry_chicken, zech_number7, hongjing_number7, number7]\n",
-    "frames_salute = [bobby_salute, beeyee_salute, henry_salute, zech_salute, hongjing_salute, salute]\n",
-    "frames_mermaid = [bobby_mermaid, beeyee_mermaid, henry_mermaid, zech_mermaid, hongjing_mermaid, mermaid, random_mermaid]\n",
+    "frames_chicken = [henry_chicken, chicken]\n",
+    "frames_number7 = [henry_chicken, number7]\n",
+    "frames_salute = [henry_salute, salute]\n",
+    "# frames_mermaid = [bobby_mermaid, beeyee_mermaid, henry_mermaid, zech_mermaid, hongjing_mermaid, mermaid, random_mermaid]\n",
     "# frames_sidestep = [bobby_sidestep, beeyee_sidestep, henry_sidestep, kabir_sidestep, zech_sidestep, hongjing_sidestep]\n",
     "# frames_turnclap = [bobby_turnclap, bobby_turnclap2, beeyee_turnclap, beeyee_turnclap2, henry_turnclap1,\n",
     "#                    henry_turnclap2, henry_turnclap3, henry_turnclap4, zech_turnclap, zech_turnclap2,]\n",
@@ -142,7 +135,7 @@
     "chicken = chicken.drop(['activity'], axis=1).copy()\n",
     "number7 = number7.drop(['activity'], axis=1).copy()\n",
     "salute = salute.drop(['activity'], axis=1).copy()\n",
-    "mermaid = mermaid.drop(['activity'], axis=1).copy()\n",
+    "# mermaid = mermaid.drop(['activity'], axis=1).copy()\n",
     "# sidestep_data = sidestep_data.drop(['activity'], axis=1).copy()\n",
     "# turnclap_data = turnclap_data.drop(['activity'], axis=1).copy()\n",
     "# wiper_data = wiper_data.drop(['activity'], axis=1).copy()\n",
@@ -165,7 +158,7 @@
     "chicken = pd.concat(frames_chicken)\n",
     "number7 = pd.concat(frames_number7)\n",
     "salute = pd.concat(frames_salute)\n",
-    "mermaid = pd.concat(frames_mermaid)\n",
+    "# mermaid = pd.concat(frames_mermaid)\n",
     "# sidestep_data = pd.concat(frames_sidestep)\n",
     "# turnclap_data = pd.concat(frames_turnclap)\n",
     "# wiper_data = pd.concat(frames_wiper)\n",
@@ -184,7 +177,7 @@
     "# wipers['activity'] = 5\n",
     "# number6['activity'] = 6\n",
     "salute['activity'] = 7\n",
-    "mermaid['activity'] = 8\n",
+    "# mermaid['activity'] = 8\n",
     "# swing['activity'] = 9\n",
     "# cowboy['activity'] = 10\n",
     "# finisher['activity'] = 11\n",
@@ -193,7 +186,7 @@
     "chicken.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\chicken_dataset.csv', index=False)\n",
     "number7.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\number7_dataset.csv', index=False)\n",
     "salute.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\salute_dataset.csv', index=False)\n",
-    "mermaid.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\mermaid_dataset.csv', index=False)\n",
+    "# mermaid.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\mermaid_dataset.csv', index=False)\n",
     "# sidestep_data.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\sidestep_dataset.csv', index=False)\n",
     "# turnclap_data.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\turnclap_dataset.csv', index=False)\n",
     "# wiper_data.to_csv(r'C:\\Users\\User\\Desktop\\Study\\Year 3\\Sem 1\\CG3002\\DanceProject\\Machine Learning\\raw data\\wiper_dataset.csv', index=False)\n",
@@ -2002,7 +1995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
