--- a/Machine Learning/model/MLP.ipynb
+++ b/Machine Learning/model/MLP.ipynb
@@ -2,86 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\Anaconda3_32bit\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The training accuracy for Neural Network is  0.9881913356128168\n",
-      "The testing accuracy for Neural Network is  0.9881569207994079\n",
-      "time taken for mlp =  0:03:26.683410\n",
-      "The training accuracy for Random Forestry is  1.0\n",
-      "The testing accuracy for Random Forestry is  0.977688484720313\n",
-      "time taken for rf =  0:01:27.890979\n",
-      "MLP:\n",
-      "[[ 150    0    0    0    0    0    0    0    0    0    0    0]\n",
-      " [   0 1118  101    0    0    0    0    0    1    0    0    0]\n",
-      " [   0    1 1204    0    0    0    0    0    0    0    0    0]\n",
-      " [   1    0    2  803    0    0    0    0    0    0    0    0]\n",
-      " [   0    0    0    0  749    0    0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0  812    0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0  695    0    0    0    0    0]\n",
-      " [   0    0    6    0    0    0    0  871    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0 1041    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0  669    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0  697    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0    0  536]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      1.00       150\n",
-      "           1       1.00      0.92      0.96      1220\n",
-      "           2       0.92      1.00      0.96      1205\n",
-      "           3       1.00      1.00      1.00       806\n",
-      "           4       1.00      1.00      1.00       749\n",
-      "           5       1.00      1.00      1.00       812\n",
-      "           6       1.00      1.00      1.00       695\n",
-      "           7       1.00      0.99      1.00       877\n",
-      "           8       1.00      1.00      1.00      1041\n",
-      "           9       1.00      1.00      1.00       669\n",
-      "          10       1.00      1.00      1.00       697\n",
-      "          11       1.00      1.00      1.00       536\n",
-      "\n",
-      "   micro avg       0.99      0.99      0.99      9457\n",
-      "   macro avg       0.99      0.99      0.99      9457\n",
-      "weighted avg       0.99      0.99      0.99      9457\n",
-      "\n",
-      "RF:\n",
-      "[[ 150    0    0    0    0    0    0    0    0    0    0    0]\n",
-      " [   0 1124   96    0    0    0    0    0    0    0    0    0]\n",
-      " [   0  112 1093    0    0    0    0    0    0    0    0    0]\n",
-      " [   1    0    0  805    0    0    0    0    0    0    0    0]\n",
-      " [   0    0    1    0  747    0    0    0    0    0    0    1]\n",
-      " [   0    0    0    0    0  812    0    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0  695    0    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0  877    0    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0 1041    0    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0  669    0    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0  697    0]\n",
-      " [   0    0    0    0    0    0    0    0    0    0    0  536]]\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      1.00      1.00       150\n",
-      "           1       0.91      0.92      0.92      1220\n",
-      "           2       0.92      0.91      0.91      1205\n",
-      "           3       1.00      1.00      1.00       806\n",
-      "           4       1.00      1.00      1.00       749\n",
-      "           5       1.00      1.00      1.00       812\n",
-      "           6       1.00      1.00      1.00       695\n",
-      "           7       1.00      1.00      1.00       877\n",
-      "           8       1.00      1.00      1.00      1041\n",
-      "           9       1.00      1.00      1.00       669\n",
-      "          10       1.00      1.00      1.00       697\n",
-      "          11       1.00      1.00      1.00       536\n",
-      "\n",
-      "   micro avg       0.98      0.98      0.98      9457\n",
-      "   macro avg       0.98      0.99      0.99      9457\n",
-      "weighted avg       0.98      0.98      0.98      9457\n",
-      "\n",
-      "done\n"
+      "The training accuracy for Neural Network is  0.9725818123341642\n",
+      "The testing accuracy for Neural Network is  0.9741575356626008\n",
+      "time taken for mlp =  0:00:48.165376\n"
      ]
     }
    ],
@@ -94,8 +34,6 @@
     "\n",
     "# Neural Network model\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "from sklearn.neural_network import BernoulliRBM\n",
     "\n",
     "from sklearn.svm import SVC\n",
     "\n",
@@ -185,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -193,82 +131,82 @@
      "output_type": "stream",
      "text": [
       "Feature ranking:\n",
-      "1. feature 6 (0.056817)\n",
-      "2. feature 0 (0.047357)\n",
-      "3. feature 35 (0.035165)\n",
-      "4. feature 1 (0.033430)\n",
-      "5. feature 71 (0.031428)\n",
-      "6. feature 17 (0.030776)\n",
-      "7. feature 3 (0.029086)\n",
-      "8. feature 69 (0.027480)\n",
-      "9. feature 64 (0.025140)\n",
-      "10. feature 53 (0.024577)\n",
-      "11. feature 33 (0.021420)\n",
-      "12. feature 28 (0.020393)\n",
-      "13. feature 57 (0.020334)\n",
-      "14. feature 58 (0.018640)\n",
-      "15. feature 22 (0.018184)\n",
-      "16. feature 4 (0.018041)\n",
-      "17. feature 26 (0.018039)\n",
-      "18. feature 46 (0.018039)\n",
-      "19. feature 20 (0.017684)\n",
-      "20. feature 44 (0.017418)\n",
-      "21. feature 21 (0.016980)\n",
-      "22. feature 23 (0.016050)\n",
-      "23. feature 62 (0.015983)\n",
-      "24. feature 59 (0.015562)\n",
-      "25. feature 7 (0.014878)\n",
-      "26. feature 56 (0.014063)\n",
-      "27. feature 40 (0.013879)\n",
-      "28. feature 70 (0.013235)\n",
-      "29. feature 63 (0.013120)\n",
-      "30. feature 12 (0.012938)\n",
-      "31. feature 9 (0.012578)\n",
-      "32. feature 27 (0.012108)\n",
-      "33. feature 38 (0.011967)\n",
-      "34. feature 34 (0.011498)\n",
-      "35. feature 30 (0.011206)\n",
-      "36. feature 13 (0.011183)\n",
-      "37. feature 45 (0.011119)\n",
-      "38. feature 66 (0.010909)\n",
-      "39. feature 51 (0.010880)\n",
-      "40. feature 42 (0.010787)\n",
-      "41. feature 39 (0.010383)\n",
-      "42. feature 54 (0.010262)\n",
-      "43. feature 60 (0.010156)\n",
-      "44. feature 2 (0.010139)\n",
-      "45. feature 24 (0.010028)\n",
-      "46. feature 48 (0.009988)\n",
-      "47. feature 10 (0.009065)\n",
-      "48. feature 49 (0.008784)\n",
-      "49. feature 41 (0.008695)\n",
-      "50. feature 18 (0.008451)\n",
-      "51. feature 52 (0.007837)\n",
-      "52. feature 19 (0.007539)\n",
-      "53. feature 31 (0.007226)\n",
-      "54. feature 25 (0.006759)\n",
-      "55. feature 67 (0.006435)\n",
-      "56. feature 65 (0.006325)\n",
-      "57. feature 29 (0.006321)\n",
-      "58. feature 55 (0.006159)\n",
-      "59. feature 61 (0.006104)\n",
-      "60. feature 47 (0.006025)\n",
-      "61. feature 68 (0.006021)\n",
-      "62. feature 14 (0.005975)\n",
-      "63. feature 36 (0.005821)\n",
-      "64. feature 32 (0.004665)\n",
-      "65. feature 11 (0.004414)\n",
-      "66. feature 37 (0.004081)\n",
-      "67. feature 5 (0.003890)\n",
-      "68. feature 16 (0.002893)\n",
-      "69. feature 43 (0.002838)\n",
-      "70. feature 15 (0.002389)\n",
-      "71. feature 8 (0.002322)\n",
-      "72. feature 50 (0.001637)\n",
-      "mean: 0.308169\n",
-      "max: 0.249718\n",
-      "iqr: 0.184756\n",
-      "mad: 0.257357\n",
+      "1. feature 0 (0.047954)\n",
+      "2. feature 6 (0.043638)\n",
+      "3. feature 71 (0.037507)\n",
+      "4. feature 1 (0.037122)\n",
+      "5. feature 35 (0.034155)\n",
+      "6. feature 17 (0.030714)\n",
+      "7. feature 7 (0.028875)\n",
+      "8. feature 3 (0.027415)\n",
+      "9. feature 33 (0.025348)\n",
+      "10. feature 28 (0.022039)\n",
+      "11. feature 53 (0.021863)\n",
+      "12. feature 64 (0.020030)\n",
+      "13. feature 4 (0.017762)\n",
+      "14. feature 46 (0.017517)\n",
+      "15. feature 26 (0.017068)\n",
+      "16. feature 21 (0.016746)\n",
+      "17. feature 69 (0.016733)\n",
+      "18. feature 20 (0.016564)\n",
+      "19. feature 59 (0.016473)\n",
+      "20. feature 58 (0.016427)\n",
+      "21. feature 57 (0.016203)\n",
+      "22. feature 62 (0.016167)\n",
+      "23. feature 22 (0.015990)\n",
+      "24. feature 40 (0.015107)\n",
+      "25. feature 44 (0.015054)\n",
+      "26. feature 39 (0.014183)\n",
+      "27. feature 56 (0.014060)\n",
+      "28. feature 63 (0.013879)\n",
+      "29. feature 23 (0.013329)\n",
+      "30. feature 70 (0.013229)\n",
+      "31. feature 51 (0.013012)\n",
+      "32. feature 38 (0.012997)\n",
+      "33. feature 52 (0.012153)\n",
+      "34. feature 66 (0.011909)\n",
+      "35. feature 45 (0.011826)\n",
+      "36. feature 54 (0.011532)\n",
+      "37. feature 34 (0.011167)\n",
+      "38. feature 18 (0.011111)\n",
+      "39. feature 12 (0.010947)\n",
+      "40. feature 41 (0.010849)\n",
+      "41. feature 27 (0.010830)\n",
+      "42. feature 30 (0.010750)\n",
+      "43. feature 2 (0.010329)\n",
+      "44. feature 60 (0.010310)\n",
+      "45. feature 10 (0.009793)\n",
+      "46. feature 67 (0.009534)\n",
+      "47. feature 9 (0.009475)\n",
+      "48. feature 24 (0.009470)\n",
+      "49. feature 31 (0.009392)\n",
+      "50. feature 42 (0.009210)\n",
+      "51. feature 48 (0.009124)\n",
+      "52. feature 13 (0.008504)\n",
+      "53. feature 49 (0.008336)\n",
+      "54. feature 19 (0.008002)\n",
+      "55. feature 29 (0.007689)\n",
+      "56. feature 55 (0.006947)\n",
+      "57. feature 61 (0.006667)\n",
+      "58. feature 68 (0.006666)\n",
+      "59. feature 32 (0.006275)\n",
+      "60. feature 14 (0.006252)\n",
+      "61. feature 25 (0.006119)\n",
+      "62. feature 36 (0.005247)\n",
+      "63. feature 11 (0.005246)\n",
+      "64. feature 65 (0.005144)\n",
+      "65. feature 5 (0.004587)\n",
+      "66. feature 47 (0.004554)\n",
+      "67. feature 43 (0.004314)\n",
+      "68. feature 37 (0.003979)\n",
+      "69. feature 16 (0.003021)\n",
+      "70. feature 50 (0.002927)\n",
+      "71. feature 15 (0.002436)\n",
+      "72. feature 8 (0.002221)\n",
+      "mean: 0.306290\n",
+      "max: 0.252042\n",
+      "iqr: 0.192251\n",
+      "mad: 0.249417\n",
       "median: 0.000000\n"
      ]
     }
@@ -327,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
